lib/tests/compile_fail/key_type_not_sync.stderr
error[E0277]: `Cell<()>` cannot be shared between threads safely
  --> tests/compile_fail/key_type_not_sync.rs:28:5
   |
28 |     #[memoized(key_expr = input, store_type = BTreeMap<NotSync, ()>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<()>` cannot be shared between threads safely
   |
   = help: within `NotSync`, the trait `Sync` is not implemented for `Cell<()>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock`
note: required because it appears within the type `NotSync`
  --> tests/compile_fail/key_type_not_sync.rs:5:8
   |
 5 | struct NotSync(Cell<()>);
   |        ^^^^^^^
   = note: required for `alloc::collections::btree::node::NodeRef<alloc::collections::btree::node::marker::Owned, NotSync, (), alloc::collections::btree::node::marker::LeafOrInternal>` to implement `Sync`
note: required because it appears within the type `Option<alloc::collections::btree::node::NodeRef<alloc::collections::btree::node::marker::Owned, NotSync, (), alloc::collections::btree::node::marker::LeafOrInternal>>`
  --> $RUST/core/src/option.rs
note: required because it appears within the type `BTreeMap<NotSync, ()>`
  --> $RUST/alloc/src/collections/btree/map.rs
   = note: required for the cast from `Box<BTreeMap<NotSync, ()>>` to `Box<(dyn Any + Send + Sync + 'static)>`
   = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
